# dhtgbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.en.md  README.md  compose.yaml  config.example.docker.yaml  config.example.yaml
.github/workflows/: cargo.yml  daily.yml  docker.yml  release.yml
docker/: entrypoint.sh
scripts/: install-systemd.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh  upgrade.ps1  upgrade.sh
src/: app.rs  config.rs  logging.rs  main.rs
src/bots/: chat.rs  master.rs  mod.rs  shared.rs  tdl.rs  xdl.rs
src/bots/common/: commands.rs  mod.rs  runner.rs
src/bots/master/: backup.rs  commands.rs  restore.rs  runtime.rs
src/bots/tdl/: forward.rs  help.rs  parsing.rs  store.rs
src/bots/xdl/: commands.rs  download.rs  formatting.rs  monitor.rs  parsing.rs  query.rs  runtime.rs  schedule.rs  store.rs  tracking.rs
src/config/: bots.rs  database.rs  services.rs
src/services/: aria2.rs  mod.rs  service_launcher.rs  task_queue.rs  tdlr.rs  twitter_bridge.rs
src/services/twitter_bridge/: amagi.rs  mapper.rs  models.rs
src/storage/: bootstrap.rs  mod.rs  sqlite.rs
